[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
mime = "0.3.17"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.71"
thiserror = "1.0.43"
validator = { version = "0.16.1", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
